<resources>
    <string name="app_name">MessageMe</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newUser">New User?</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>

    <string name="from">From: </string>
    <string name="message">Message</string>
    <string name="to">To: </string>
    <string name="sendMessage">Send Message</string>


</resources>
